[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/infrastructure/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/infrastructure/PassiveWorld.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/World.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/WorldScenes/Events/Plaza.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Enemies/EnemyTypes/Bishops/BishopPantalon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Enemies/BishopInstancer.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Enemies/EnemyTypes/Bishops/BishopHendrik.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/infrastructure/Scenes/WorldArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/WorldScenes/Events/CityCenter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Enemies/EnemyTypes/Bishops/BishopDodarz.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/Enemies/EnemyTypes/Bishops/BishopGabriel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Follower/PecuniaRepresentative/PecuniaRepresentative.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Follower/PecuniaRepresentative/PecuniaRepresentativeBackground.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Follower/PecuniaRepresentative/PecuniaRepresentativeEffect.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Testnodes/ViewportPicture.tscn" type="PackedScene" id=15]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("CanvasLayer/HBoxContainer/TextureRect/3333333333333333333333333333")

[sub_resource type="Animation" id=2]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 910, 1400 ), Rect2( 0, 1000, 910, 1400 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/HBoxContainer/TextureRect/3333333333333333333333333333:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 1000 ), Vector2( 400, 1000 ) ]
}

[sub_resource type="Animation" id=4]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/HBoxContainer/TextureRect/3333333333333333333333333333/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Game" type="Node" groups=[
"newTurn",
]]
script = ExtResource( 1 )

[node name="ActiveWorld" parent="." instance=ExtResource( 3 )]

[node name="BishopPicker" type="Node" parent="."]
script = ExtResource( 6 )
bishop1 = ExtResource( 7 )
bishop2 = ExtResource( 5 )
bishop3 = ExtResource( 10 )
bishop4 = ExtResource( 11 )

[node name="PassiveWorld" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CityCore" parent="PassiveWorld" instance=ExtResource( 8 )]
position = "CityCore"

[node name="CityCenter" parent="PassiveWorld/CityCore" instance=ExtResource( 9 )]

[node name="Plaza" parent="PassiveWorld/CityCore" instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_right = -250.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
margin_right = 710.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3333333333333333333333333333" parent="CanvasLayer/HBoxContainer/TextureRect" instance=ExtResource( 15 )]

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
margin_left = 710.0
margin_right = 1420.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3333333333333333333333333333" type="Viewport" parent="CanvasLayer/HBoxContainer/TextureRect2"]
size = Vector2( 1200, 1000 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/HBoxContainer/TextureRect2/3333333333333333333333333333"]
current = true
zoom = Vector2( 0.828047, 0.828047 )

[node name="PecuniaRepresentativeBackground" type="Sprite" parent="CanvasLayer/HBoxContainer/TextureRect2/3333333333333333333333333333"]
texture = ExtResource( 13 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/HBoxContainer/TextureRect2/3333333333333333333333333333"]
position = Vector2( 0, -179.16 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 0, 907.183, 910, 1400 )

[node name="3333333333333" type="Sprite" parent="CanvasLayer/HBoxContainer/TextureRect2/3333333333333333333333333333"]
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/TextureRect2/3333333333333333333333333333"]
autoplay = "Neue Animation"
"anims/Neue Animation" = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
"anims/Neue Animation" = SubResource( 3 )
"anims/Neue Animation (2)" = SubResource( 4 )
[connection signal="playerMovement" from="ActiveWorld" to="PassiveWorld" method="_on_playerMovement"]
[connection signal="startEnemyChase" from="BishopPicker" to="." method="_on_BishopPicker_startEnemyChase"]
